// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput component with default values 1`] = `
<div
  aria-describedby={undefined}
  className="MuiFormControl-root-1"
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
  style={undefined}
>
  <div
    className="MuiInput-root-5 MuiInput-formControl-6 MuiInput-inkbar-7 MuiInput-underline-11"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete="Hello World !!"
      autoFocus={true}
      className="MuiInput-input-14 MuiInput-inputSingleline-17"
      defaultValue="nooo"
      disabled={false}
      id={undefined}
      name={undefined}
      onChange={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder="hello"
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="text"
      value={undefined}
    />
  </div>
</div>
`;

exports[`TextInput component with editable true 1`] = `
<div
  aria-describedby={undefined}
  className="MuiFormControl-root-1"
  editable={false}
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
  style={undefined}
>
  <div
    className="MuiInput-root-5 MuiInput-disabled-10 MuiInput-formControl-6 MuiInput-inkbar-7 MuiInput-underline-11"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete="Hello World !!"
      autoFocus={true}
      className="MuiInput-input-14 MuiInput-inputDisabled-16 MuiInput-inputSingleline-17"
      defaultValue="nooo"
      disabled={true}
      id={undefined}
      name={undefined}
      onChange={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder="hello"
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="text"
      value={undefined}
    />
  </div>
</div>
`;

exports[`TextInput component with onChangeText 1`] = `
<div
  aria-describedby={undefined}
  className="MuiFormControl-root-1"
  editable={false}
  onBlur={[Function]}
  onFocus={[Function]}
  required={false}
  style={undefined}
>
  <div
    className="MuiInput-root-5 MuiInput-disabled-10 MuiInput-formControl-6 MuiInput-inkbar-7 MuiInput-underline-11"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete="Hello World !!"
      autoFocus={true}
      className="MuiInput-input-14 MuiInput-inputDisabled-16 MuiInput-inputSingleline-17"
      defaultValue="nooo"
      disabled={true}
      id={undefined}
      name={undefined}
      onChange={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder="hello"
      readOnly={undefined}
      required={undefined}
      rows={undefined}
      type="text"
      value={undefined}
    />
  </div>
</div>
`;
